--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,26 +1,26 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "account_id": "07c56e0dc4b3b1597495aa78fe7ebbf8",
+  "account_id": "b20d6fb8a5162fd5c3571dc431e57c87",
   "analytics_engine_datasets": [
     {
       "binding": "ANALYTICS"
     }
   ],
-  "compatibility_date": "2025-07-19",
+  "compatibility_date": "2026-02-24",
   "kv_namespaces": [
     {
-      "binding": "CACHE_KV",
-      "id": "4d5895d8716247f486493b93edbc5fe9",
+      "binding": "dplx_cache_kv",
+      "id": "3c7bede1d30946bbac4f56724ad8c88b",
       "preview_id": "e9e499fe006e4879a0668e792fe2dd15"
     },
     {
-      "binding": "RATE_LIMIT_KV",
-      "id": "07147ca64a4c48fe952f62afe469bb44",
+      "binding": "dplx_rate_limit_kv",
+      "id": "5903f5397a0748e6a044cd5e0fd8db66",
       "preview_id": "bbed039364e5488e8ed58701c3ee5da5"
     }
   ],
   "main": "src/index.ts",
-  "name": "deeplx",
+  "name": "dplx-d4e9",
   "observability": {
     "enabled": false,
     "head_sampling_rate": 1,
@@ -44,7 +44,7 @@
   },
   "vars": {
     "DEBUG_MODE": "false",
-    "PROXY_URLS": "https://0.xdpl.xixu.dpdns.org/jsonrpc,https://1.xdpl.xixu.dpdns.org/jsonrpc,https://2.xdpl.xixu.dpdns.org/jsonrpc,https://3.xdpl.xixu.dpdns.org/jsonrpc,https://4.xdpl.xixu.dpdns.org/jsonrpc,https://5.xdpl.xixu.dpdns.org/jsonrpc,https://6.xdpl.xixu.dpdns.org/jsonrpc,https://7.xdpl.xixu.dpdns.org/jsonrpc,https://8.xdpl.xixu.dpdns.org/jsonrpc,https://9.xdpl.xixu.dpdns.org/jsonrpc"
+    "PROXY_URLS": "https://xdpl-egg001.vercel.app/jsonrpc,https://xdpl-egg002.vercel.app/jsonrpc,https://0.xdpl.xixu.dpdns.org/jsonrpc,https://1.xdpl.xixu.dpdns.org/jsonrpc,https://2.xdpl.xixu.dpdns.org/jsonrpc,https://3.xdpl.xixu.dpdns.org/jsonrpc,https://4.xdpl.xixu.dpdns.org/jsonrpc,https://5.xdpl.xixu.dpdns.org/jsonrpc,https://6.xdpl.xixu.dpdns.org/jsonrpc,https://7.xdpl.xixu.dpdns.org/jsonrpc,https://8.xdpl.xixu.dpdns.org/jsonrpc,https://9.xdpl.xixu.dpdns.org/jsonrpc"
   },
   "workers_dev": false
 }
